--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -31,13 +31,15 @@
             {% for pagina in contatos.paginator.page_range %}
               {% if contatos.number == pagina %}
               <li class="page-item active">
-                <a class="page-link" href="?p={{ pagina }}">
-                  {{ pagina }}
+                <a class="page-link" 
+                  	href="?p={{ pagina }}&termo={{ request.GET.termo }}">
+                    {{ pagina }}
                 </a>
               </li>
               {% else %}
               <li class="page-item">
-                <a class="page-link" href="?p={{ pagina }}">
+                <a class="page-link" 
+                  href="?p={{ pagina }}&termo={{ request.GET.termo }}">
                   {{ pagina }}
                 </a>
               </li>
