--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,18 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
+        <br><br>
+        <h2>Buscar</h2>
+        <form action="{% url 'busca' %}" method="get">
+          <div class="form-group row">
+            <div class="col-12">
+              <input class="form-control" type="search" 
+              value="{{ request.GET.termo }}" name="termo" 
+              placeholder="Buscar por nome, sobrenome, telefone..."
+              id="search-input">
+            </div>
+          </div>
+        </form>
         {%block conteudo%} {%endblock%}
       </div>
     </div>
