--- a/contatos/templates/contatos/detalhes.html
+++ b/contatos/templates/contatos/detalhes.html
@@ -2,6 +2,11 @@
 
 {% block conteudo %}
 <h1 class="mt-5">{{ contato.nome }}</h1>
+{% if contato.foto %}
+<p>
+  <img src="{{ contato.foto.url }}" style="max-width: 250px;">
+</p>
+{% endif %}
 <dl>
   <dt>ID</dt>
   <dd>{{ contato.id }}</dd>
