--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
+
+        {% if 'account' not in request.path %}
         <br><br>
         <form action="{% url 'busca' %}" method="get">
           <div class="form-group row">
@@ -27,6 +29,8 @@
             </div>
           </div>
         </form>
+        {% endif %}
+
         {%block conteudo%} {%endblock%}
       </div>
     </div>
