--- a/accounts/templates/accounts/cadastro.html
+++ b/accounts/templates/accounts/cadastro.html
@@ -1,4 +1,27 @@
 {% extends 'base.html'%}
 {% block conteudo %}
-Tela de cadastro
+<h1 class="mt-3 mb-3">Cadastro</h1>
+<form method="post" action="{% url 'cadastro' %}">
+    {% include 'parciais/_messages.html' %}
+    {% csrf_token %}
+    <div class="form-group">
+        <input type="text" name="nome" class="form-control" id="exampleInputEmail1" placeholder="Nome">
+    </div>
+    <div class="form-group">
+        <input type="text" name="sobrenome" class="form-control" id="exampleInputEmail1" placeholder="Sobrenome">
+    </div>
+    <div class="form-group">
+        <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Sobrenome">
+    </div>
+    <div class="form-group">
+        <input type="text" name="usuario" class="form-control" id="exampleInputEmail1" placeholder="Usuario">
+    </div>
+    <div class="form-group">
+        <input type="password" nome="senha" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+    </div>
+    <div class="form-group">
+        <input type="password" nome="senha2" class="form-control" id="exampleInputPassword1" placeholder="Repetir Senha">
+    </div>
+    <button type="submit" class="btn btn-primary">Cadastrar</button>
+</form>
 {% endblock %}
