--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,19 @@
 {% extends 'base.html'%}
 {% block conteudo %}
-Tela de login
+<h1 class="mt-3">Tela de login</h1>
 {% include 'parciais/_messages.html' %}
+<form action="/accounts/login/" method="post">
+    {% csrf_token %}
+    <div class="form-group">
+        <label>Usuario</label>
+        <input type="text" name="usuario" class="form-control" 
+        value="{{request.POST.usuario}}" placeholder="Usuario">
+    </div>
+    <div class="form-group">
+        <label>Senha</label>
+        <input type="password" class="form-control" name="senha" 
+        placeholder="Senha">
+    </div>
+    <button type="submit" class="btn btn-primary">Entrar</button>
+</form>
 {% endblock %}
