--- a/accounts/templates/accounts/cadastro.html
+++ b/accounts/templates/accounts/cadastro.html
@@ -1,4 +1,7 @@
 {% extends 'base.html'%}
+{% block titulo %}
+Cadastrar
+{% endblock %}
 {% block conteudo %}
 <h1 class="mt-3 mb-3">Cadastro</h1>
 <form method="post" action="{% url 'cadastro' %}">
