--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,4 +1,7 @@
 {% extends 'base.html'%}
+{% block titulo %}
+Dashboard
+{% endblock %}
 {% block conteudo %}
 <h1 class="mt-3 mb-3">Ola {{ user.first_name }} {{ user.last_name }}</h1>
 <form action="/accounts/logout/" method="post">
