--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,8 +1,13 @@
 {% extends 'base.html'%}
+{% block titulo %}
+Login
+{% endblock %}
 {% block conteudo %}
 <h1 class="mt-3">Tela de login</h1>
-{% include 'parciais/_messages.html' %}
+
+{% if not user.is_authenticated %}
 <form action="/accounts/login/" method="post">
+    {% include 'parciais/_messages.html' %}
     {% csrf_token %}
     <div class="form-group">
         <label>Usuario</label>
@@ -16,4 +21,9 @@
     </div>
     <button type="submit" class="btn btn-primary">Entrar</button>
 </form>
+{% else %}
+<p> Você já está logado como {{user}}.</p>
+<p>Vá para a <a href="{% url 'dashboard' %}">Dashboard</a></p>
+<p><a href="{% url 'logout' %}">Logout</a></p>
+{% endif %}
 {% endblock %}
