--- a/contatos/templates/contatos/detalhes.html
+++ b/contatos/templates/contatos/detalhes.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
-
+{% block titulo %}
+{{ contato.nome }} {{contato.sobrenome}}
+{% endblock %}
 {% block conteudo %}
-<h1 class="mt-5">{{ contato.nome }}</h1>
+<h1 class="mt-5">{{ contato.nome }} {{contato.sobrenome}}</h1>
 {% if contato.foto %}
 <p>
   <img src="{{ contato.foto.url }}" style="max-width: 250px;">
