--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -6,6 +6,21 @@ Dashboard
 <h1 class="mt-3 mb-3">Ola {{ user.first_name }} {{ user.last_name }}</h1>
 <form action="/accounts/logout/" method="post">
     {% csrf_token %}
-    <button type="submit">Deslogar</button>
+    <button type="submit" class="btn btn-primary">Deslogar</button>
+    <br>
 </form>
+
+<div class="cointeiner">
+    <form action="/accounts/dashboard/" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <table class="table">
+            {{ form }}
+        </table>
+        <tr>
+            <td colspan="2">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </td>
+        </tr>
+    </form>
+</div>
 {% endblock %}
